src/noosfero-spb-theme/css/administration-panel.css
/*** Environment Admin Pages - General Rules ***/
.action-admin_panel-index #content .main-block h2,
.controller-features #content .main-block h2{
  font-family: Arial;
  font-size: 22px;
  font-weight: 700;
  line-height: 21px;
}

/* Environment Settings */

/* Profile tab */

.action-admin_panel-site_info .main-content .ui-tabs{
  border: none;
}

.action-admin_panel-site_info .main-content .ui-tabs .ui-tabs-nav{
  margin: 0 0 0 1em;
  padding: 0;
  background: none;
  color: #172738;
  border: 0px solid #aaaaaa;
  border-radius: 4px;
  font-weight: bold;
}

.action-admin_panel-site_info .main-content .ui-widget-content .ui-state-default,
.action-admin_panel-site_info .main-content .ui-widget-header .ui-state-default{
  background: #d5d5d5 none;
  color: #555555;
  font-weight: normal;
}

.action-admin_panel-site_info .main-content .ui-widget-content .ui-state-active,
.action-admin_panel-site_info .main-content .ui-widget-header .ui-state-active{
  background: #eeeff1;
  color: #212121;
  font-weight: normal;
}

.action-admin_panel-site_info .main-content .ui-tabs .ui-tabs-panel{
  display: block;
  padding: 1em 1.4em;
  background-color: #eeeff1;
  color: #777;
  border-width: 1px;
  font-size: 13px;
  text-decoration: none;
}

/* Organizations Settings */

.action-organizations-index .main-block form#manage-profiles,
.action-organizations-index .main-block form#manage-profiles form{
  background-color: transparent;
}

.action-organizations-index .main-block form#manage-profiles .search-field{
  margin-bottom: 30px;
}

.action-organizations-index .main-block form#manage-profiles .search-field .formfield {
  width: 100%;
  margin-right: 0.5em;
  float: left;
}

.action-organizations-index .main-block form#manage-profiles .search-field .formfield input {
  margin-top: 0px;
  margin-right: 0.5em;
  padding: 6px;
  min-width: 97%;
  height: 19px;
  max-height: 19px;
  background: none;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.action-organizations-index .main-block form#manage-profiles input.button.submit{
  height: 32px;
  margin-top: 8px;
  padding: 5px 15px;
  background: #3E67B1 none;
  color: #FFF;
  border-radius: 4px;
  border: 1px solid #3E67B1;
  line-height: 22px;
  font-size: 14px;
  text-transform: uppercase;
}

.action-organizations-index .main-block form#manage-profiles input.button.submit:hover{
  background: #5E82C6;
}

.action-organizations-index .main-block #environment-profiles-filter-title,
.action-organizations-index .main-block #environment-profiles-filter-filter{
  line-height: 35px;
  font-size: 12px;
}

.action-organizations-index .main-block  table#organizations-list th{
  text-align: left;
  vertical-align: middle;
  padding: 2px 8px;
}

/*** Features Settings ***/

.controller-features #content form *{
  font-size: 15px;
}

.controller-features #content th{
  text-align: left;
}

.controller-features #content h3{
  min-height: 0;
  margin: 20px auto 10px auto;
}

.controller-features #content hr{
  display: none;
}

.controller-features #content ul.token-input-list{
  padding: 6px;
  background: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-family: Arial, helvetica;
  font-size: 15px;
}

/*** Community Admin pages ***/
/* Homepage */
.action-profile_editor-index #profile-editor-index h1.block-title{
  color: #172738;
  background-color: transparent;
  border-bottom: none;
  font-size: 2.3em;
  font-weight: bold;
  font-variant: normal;
  font-family: Arial, open_sansbold, Helvetica, sans-serif;
}

/* Index */
.action-cms-index .cms-articles th{
  text-align: left;
}

/* Spam Index */
.action-spam-index .ui-widget-header {
  border: none;
  background: none;
}

/* Tasks - tmp adjust */
.action-profile_editor-index #content .pending-tasks{
  max-width: 500px;
  padding: 15px 20px;
  margin: 20px 0 30px 0;
  border: 1px dotted #ccc;
  border-left: 5px solid #FF0366;
  border-radius: 3px;
  display: block;
  background: #fff;
  line-height: 20px;
  font-size: 13px;
}

.action-profile_editor-index #content .pending-tasks .button.icon-todo.with-text{
  background: #3E67B1;
  color: #FFF;
}

.action-profile_editor-index #content .pending-tasks .button.icon-todo.with-text:hover{
  background: #5E82C6;
}

